[tool.poetry]
name = "work-with-db"
version = "0.1.0"
description = ""
authors = ["shurochka <alexa.sazhaeva@gmail.com>"]
readme = "README.md"
packages = [{include = "work_with_db"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.98.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
